refactor: 코드개선